methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:18: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:34: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:44: error: not found: value dogHouse
		dogHouse();		
                ^